style-sheets/form.css
.navbar{
    background-color: white;
    position: sticky;
    height: 77px;
    width: 100%;
    
}

body{
    background-color:white ;
}

.sidebutton{
    
    background-color: #1EB4F0;
    height: 56px;
    border-top-left-radius: 32px;
    border-bottom-left-radius: 32px;
    border-width: 0px;
    width: 100%;
    color:white;
    display: flex;
    align-items: center;
    padding-left: 8px;
    padding-right: 0px;
    gap: 4px;
}


.main-page{
    display: flex;
    flex-direction: row;
    height: 100vh;
    width: 100%;
}




.sidebar{
    
    background-color: white;
    height: 100%;
    width: 20%;
    
    border-width: 10px;
    border-color: black;
}   

.main-space{
    background-color: #F3F6FA;
    
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    gap: 30px;
}
.top-label,.form-area{
    border-radius: 8px;
    background-color: white;
    padding-left: 24px;
    padding-bottom: 10px;
    padding-top: 10px;
    margin: 20px;
    
}


.row{
    display: flex;
    flex-direction: row;
    width: 100%;
}

.pair{
    display: flex;
    flex-direction: column;
    padding: 10px;
    
}
input{
    padding: 5px;
    width: 460px;
    height:44px;
    border-radius: 4px;
    border-width: 1px;
    background-color: #FAFAFA;
    border-color: #C6CDD9;
}

.button-row{
    display: flex;
    flex-direction: row;
    gap: 8px;
    width: 50%;
}

.create-button{
    border-radius: 8px;
    height: 50px;
    background-color: #03AEEE;
    color:white;
    width: 30%;
}

.cancel-button{
    border-color: #63667A;
    width: 30%;
    border-radius: 8px;
    height: 50px;
}


.custom-file-input{
  
  font-weight: 700;
  font-size: 10pt;
  align-content:center;
  padding: 5px;
  width: 460px;
  height:44px;
  border-radius: 4px;
  background-color: #FAFAFA;
  border: 1px solid #000;
}

.def-button{
    display: none;
}
.def-button::-webkit-file-upload-button {
  visibility: hidden;
}

